# fumo-lib

./: CMakeLists.txt  LICENSE  README.md  a  a.out  build.sh  ee.md  example_structs.h  fumo_lib.h  fumo_variant.c  macrostuff.h  main.c  main.out  map_macro.h  mapmacro.c  somefile.c  somefile.txt  structs.h
archived_old_fumo_lib_impl/: .gitignore  CMakeLists.txt
archived_old_fumo_lib_impl/examples/: CMakeLists.txt  result_type.c  usage.c
archived_old_fumo_lib_impl/src/: fumo_type_name.h
examples/: CMakeLists.txt  result_type.c  resulttypes.c  safe_access.c  usage.c
fumo_variant/impl_fumo_variant/: fumo_get.h  variant_and_typenames.h
helper_macros/: map_macro.h  standard_c_definitions.h
src/: a  a.out  counter.h  ee.h  fumo_lib.h  leftover_macros.h  main.c  main.out  new_main.c  resulttypes.asdasd  resulttypes.c  some.c  some.cpp  somevar.c  staticassert.h  structs.h  testattributes.c
src/fumo/: for_each_macro.h  fumo_c_definitions.h  fumo_data_structures.h  fumo_type_name.h  optional_t.h  printf_macro.h  unusedforeach.h  variant.h
src/fumo_lib_impl/: fumo_c_definitions.h  main.c
src/fumo_lib_old_unusued_code/: fumo_c_definitions.h
src/fumo_variant/: fumo_variant.h  printf_macro.h
src/fumo_variant/impl_fumo_variant/: fumo_get.h  variant_and_typenames.h
testing_fumo/: leftover_macros.h  result_type.c
